--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
     "multer": "^1.1.0",
-    "xls-to-json-lc": "^0.3.4",
-    "xlsx": "^0.16.2",
-    "xlsx-to-json-lc": "^0.5.0"
+    "xlsx": "^0.16.2"
+
   }
 }
